--- a/templates/recommend.html
+++ b/templates/recommend.html
@@ -26,6 +26,7 @@
     ::-webkit-scrollbar {
       width: 12px;
 	    background-color: #F5F5F5;
+      border-radius: 10px;
     }
 
     /* Track */
