thay đổi tokenization

--- a/templates/recommend.html
+++ b/templates/recommend.html
@@ -121,8 +121,8 @@
 
   <div class="movie" style="color: #E8E8E8; background-color: #5d595942;">
     <center>
-      <h3 style="text-align: left;">Top Picks For You</h3>
-      <h5 style="text-align: left;">(Click any of the movies to get recommendation)</h5>
+      <h3 style="text-align: left;">Top-10 Recommend For You</h3>
+      <h5 style="text-align: left;">(Please click the movie to receive recommendation)</h5>
     </center>
   </div>
   <!-- owl carousel menu -->
@@ -150,8 +150,8 @@
     {% if casts|length > 1 %}
     <div class="movie" style="color: #E8E8E8; background-color: #5d595942;">
       <center>
-        <h3 style="text-align: left;">Top Cast</h3>
-        <h5 style="text-align: left;">(Click on the cast to know more)</h5>
+        <h3 style="text-align: left;">Top-5 cast</h3>
+        <h5 style="text-align: left;">(Please click the cast to see details)</h5>
       </center>
     </div>
     <!-- owl carousel menu -->
@@ -197,7 +197,7 @@
             <td>{{review}}</td>
             <td>
               <center>
-                {{status}} :
+                {{status}} : 
                 {% if status =='Good' %}
                 &#128515;
                 {% else %}
