--- a/templates/home.html
+++ b/templates/home.html
@@ -26,8 +26,8 @@
 </head>
 
 <body id="content" style="font-family: 'Noto Sans JP', sans-serif;">
-  <div class="container" style="background-image: url('/../static/image.jpg'); height: 600px;">
-      <div class="ml-container " style="display: block;">
+  <div class="container-fluid">
+      <div class="ml-container" style="display: block; background-image: url('/../static/image.jpg'); height: 90vh">
         <a href="https://github.com/VyDuong162/Movie-recommendation-system-base-on-sentiment-analysis" target="_blank" class="github-corner" title="View source on GitHub">
               <svg data-toggle="tooltip"
               data-placement="left" width="80" height="80" viewBox="0 0 250 250"
@@ -53,26 +53,29 @@
                 <button class="btn btn-primary btn-block movie-button" id="movie-button" type="submit" style="background-color: #e5c409;text-align: center;border-color: #251c1c;width:120px; color: #756969;" disabled="true" >Enter</button><br><br>
               </div>
             </div> 
-      </div>
-      <div class="ml-container" style="display: block;">
-        <div id="loader" class="text-center">
-        </div>
+      </div> 
+      <main>
+        <div class="ml-container" style="display: block;">
+          <div id="loader" class="text-center">
+          </div>
+          
+          <div class="fail">
+            <center><h3>Sorry! The movie you requested is not in our database. 
+            Please check the spelling or try with other movies!</h3></center>
+          </div>
         
-        <div class="fail">
-          <center><h3>Sorry! The movie you requested is not in our database. 
-          Please check the spelling or try with other movies!</h3></center>
+          <div class="results">
+            <center>
+              <h2 id="name" class="text-uppercase"></h2>
+            </center>
+          </div>   
         </div>
-      
-        <div class="results">
-          <center>
-            <h2 id="name" class="text-uppercase"></h2>
-          </center>
-        </div>   
-      </div>
-      
-  </div>
-
-  <div class="footer text-center" style="background-color: #e5c40973; right: 0px; bottom: 0px;">Made with<span style="font-size:150%;color:yellow; "> &hearts; </span>by Me</div>
+      </main>
+    </div>
+    <div class="footer text-center" style="background-color: #e5c40973; right: 0px; bottom: 0px;">Demo <span style="font-size:150%;color:yellow; "> &hearts; </span>by Me</div>
+  
+  
+  
   <script src="https://cdn.jsdelivr.net/npm/@tarekraafat/autocomplete.js@7.2.0/dist/js/autoComplete.min.js"></script>
   <script type="text/javascript" src="{{url_for('static', filename='autocomplete.js')}}"></script>
 
