--- a/static/style.css
+++ b/static/style.css
@@ -24,7 +24,7 @@
 }
 
 #content {
-	background-color: #121212;
+	background-color: #ffffff;
 	font-family: 'Noto Sans JP', sans-serif;
 }
 
@@ -33,7 +33,7 @@
 }
 
 .footer {
-	color: #e4e0e0;
+	color: #ffffff;
 	text-align:right;
 	position: fixed;
  	bottom: 20px;
@@ -45,7 +45,7 @@ h1 {
     font-family: 'Netflix Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
     color: rgb(235, 211, 3); /* #e50914 */
     font-weight: bold;
-    margin-top: 30px;
+    margin-top: 20px;
     text-shadow: #000000 0px 0px 13px;
  }
 
