--- a/templates/home.html
+++ b/templates/home.html
@@ -22,12 +22,16 @@
   <script type="text/javascript">
     var films = {{suggestions|tojson}};
   </script>
-
+  <style>
+    #food_list{
+      position: relative;
+    }
+  </style>
 </head>
 
 <body id="content" style="font-family: 'Noto Sans JP', sans-serif;">
   <div class="container-fluid">
-      <div class="ml-container" style="display: block; background-image: url('/../static/image.jpg'); height: 90vh">
+      <div class="ml-container" style="display: block; background-image: url('/../static/image.jpg'); height: 95vh">
         <a href="https://github.com/VyDuong162/Movie-recommendation-system-base-on-sentiment-analysis" target="_blank" class="github-corner" title="View source on GitHub">
               <svg data-toggle="tooltip"
               data-placement="left" width="80" height="80" viewBox="0 0 250 250"
@@ -41,7 +45,7 @@
             fill="currentColor" class="octo-body"></path>
               </svg>
             </a>   
-            <div class="ml-container">
+            <div class="ml-container" style="padding-top: 90px;">
               <center><h1> Movie Recommendation System</h1></center>
             
               <div class="form-group shadow-textarea" style="margin-top: 30px;text-align: center;color: white;">
@@ -50,7 +54,7 @@
               </div>
           
               <div class="form-group" style="text-align: center;">
-                <button class="btn btn-primary btn-block movie-button" id="movie-button" type="submit" style="background-color: #e5c409;text-align: center;border-color: #251c1c;width:120px; color: #756969;" disabled="true" >Enter</button><br><br>
+                <button class="btn btn-primary btn-block movie-button" id="movie-button" type="submit" style="background-color: #e5c409;text-align: center;border-color: #251c1c;width:120px; color: #756969;" disabled="true" >Search</button><br><br>
               </div>
             </div> 
       </div> 
@@ -59,9 +63,8 @@
           <div id="loader" class="text-center">
           </div>
           
-          <div class="fail">
-            <center><h3>Sorry! The movie you requested is not in our database. 
-            Please check the spelling or try with other movies!</h3></center>
+          <div class="fail" style="margin-bottom: 11.5rem; margin-top: 120px;">
+            <center><h3>Sorry! The movie you requested is not in our database.</h3></center>
           </div>
         
           <div class="results">
@@ -72,7 +75,7 @@
         </div>
       </main>
     </div>
-    <div class="footer text-center" style="background-color: #e5c40973; right: 0px; bottom: 0px;">Demo <span style="font-size:150%;color:yellow; "> &hearts; </span>by Me</div>
+    <div class="footer text-center" style="background-color: #e5c409f0; right: 0px; bottom: 0px;">Demo <span style="font-size:150%;color:yellow; "> &hearts; </span>by Me</div>
   
   
   
