--- a/templates/recommend.html
+++ b/templates/recommend.html
@@ -17,48 +17,25 @@
   <!-- Bootstrap -->
   <link rel="stylesheet" type="text/css" href="{{ url_for('static',filename='css/bootstrap.min.css') }}">
 
-  <!-- Owl-Carousel -->
-  <link rel="stylesheet" type="text/css" href="{{ url_for('static',filename='css/owl-carousel/owl.carousel.min.css') }}">
-  <link rel="stylesheet" type="text/css" href="{{ url_for('static',filename='css/owl-carousel/owl.theme.default.min.css') }}">
   <link rel="stylesheet" type="text/css" href="{{ url_for('static',filename='style.css') }}">
   <style>
-    /* width */
-    ::-webkit-scrollbar {
-      width: 12px;
-	    background-color: #F5F5F5;
-      border-radius: 10px;
-    }
 
-    /* Track */
-    ::-webkit-scrollbar-track {
-      -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
-      border-radius: 10px;
-      background-color: #F5F5F5;
-    }
-    
-    /* Handle */
-    ::-webkit-scrollbar-thumb {
-      background-color: #00000040;
-      border-radius: 10px;
-      -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.3);
-    }
-
-    /* Handle on hover */
-    ::-webkit-scrollbar-thumb:hover {
-      border-radius: 10px;
-      -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.3);
-      background-color: #555;
-    }
-    main{
+    main {
       margin-top: -340px;
     }
-    .footer{
+
+    .footer {
       position: relative;
+    }
+    #name{
+      margin-bottom: -20px;
+      margin-top: 10px;
     }
   </style>
 </head>
 
 <body id="content">
+  <br>
   <div class="results">
     <center>
       <h2 id="name" class="text-capitalize" style="color: #ffffff;">{{title}}</h2>
@@ -85,82 +62,73 @@
         <h6 id="date">RELEASE DATE: &nbsp;{{release_date}}</h6>
         <h6 id="runtime">RUNTIME: &nbsp;{{runtime}}</h6>
         <h6 id="status">STATUS: &nbsp;{{status}}</h6>
+        <h6 id="user_review" >
+          <b>USER REVIEW:</b>
+         <span style="font-size: 20px;">
+           {% if sentiment_avg == 'Good' %}
+          &#128515;
+          {% else %}
+          &#128534;
+          {% endif %}
+          ({% for sentiment, count in sentiment_count.items() if not sentiment_count.hidden %}
+          <tr>
+            <td>
+              {% if sentiment == 0 %}
+              &#128534;: {{count}}
+              {% else %}
+              &#128515;: {{count}}
+              {% endif %}
+            </td>
+          </tr>
+          {% endfor %})
+        </span> 
+        </h6>
       </div>
     </div>
   </div>
   <br />
 
-  {% for name, details in cast_details.items() if not cast_details.hidden %}
-  <div class="modal fade" id="{{details[0]}}" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel3"
-    aria-hidden="true">
-    <div class="modal-dialog modal-lg" role="document">
-      <div class="modal-content">
-        <div class="modal-header" style="background-color: #e5c409;color: white;">
-          <h5 class="modal-title" id="exampleModalLabel3">{{name}}</h5>
-          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-            <span aria-hidden="true" style="color: white">&times;</span>
-          </button>
-        </div>
 
-        <div class="modal-body">
-          <img class="profile-pic" src="{{details[1]}}" alt="{{name}} - profile"
-            style="width: 250px;height:400px;border-radius: 10px;" />
-          <div style="margin-left: 20px">
-            <p><strong>Birthday:</strong> {{details[2]}} </p>
-            <p><strong>Place of Birth:</strong> {{details[3]}} </p>
-            <p>
-            <p><strong>Biography:</strong>
-            <p>
-              {{details[4]}}
-            </p>
-          </div>
-        </div>
-        <div class="modal-footer">
-          <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-        </div>
-      </div>
-    </div>
-  </div>
-  {% endfor %}
 
   {% if movie_cards|length > 1 %}
 
-  <div class="movie" style="color: #E8E8E8; background-color: #5d595942;">
+  <div class="movie" style="color: #E8E8E8; background-color: #242323f5;">
     <center>
-      <h3 style="text-align: left;">Top-10 Recommend For You</h3>
+      <h3 style="text-align: left;">Recommend For You</h3>
       <h5 style="text-align: left;">(Please click the movie to receive recommendation)</h5>
     </center>
   </div>
   <!-- owl carousel menu -->
- 
-     <div class="movie-content" style="background-color: #181818b5;">  <!--height: 400px; overflow: auto; -->
-        {% for poster, title in movie_cards.items() if not movie_cards.hidden %}
-        <div class="card" style="width: 200px; word-wrap: break-word;" title="{{title}}" onclick="recommendcard(this)">
-          <div class="imghvr">
-            <img class="card-img-top" height="250" width="120" alt="{{title}} - poster" src={{poster}}>
-            <figcaption class="fig">
-              <button class="card-btn btn btn-danger"> Click Me </button>
-            </figcaption>
-          </div>
-          <div class="card-body">
-            <h5 class="card-title">{{title| title}}</h5>
-          </div>
-        </div>
-        {% endfor %}
+
+  <div class="movie-content" style="background-color: #fcfcfcb5;">
+    <!--height: 400px; overflow: auto; -->
+    {% for poster, title in movie_cards.items() if not movie_cards.hidden %}
+    <div class="card" style="width: 210px; word-wrap: break-word;" title="{{title}}" onclick="recommendcard(this)">
+      <div class="imghvr">
+        <img class="card-img-top" height="250" width="130" alt="{{title}} - poster" src={{poster}}>
+        <figcaption class="fig">
+          <button class="card-btn btn btn-danger"> Click Me </button>
+        </figcaption>
       </div>
- 
+      <div class="card-body">
+        <h5 class="card-title">{{title| title}}</h5>
+      </div>
+    </div>
+    {% endfor %}
+  </div>
+
   {% endif %}
 
-  <center>
+  <!-- <center>
     {% if casts|length > 1 %}
-    <div class="movie" style="color: #E8E8E8; background-color: #5d595942;">
+    <div class="movie" style="color: #E8E8E8; background-color: #242323f5;margin-top: 10px;">
       <center>
         <h3 style="text-align: left;">Top-5 cast</h3>
         <h5 style="text-align: left;">(Please click the cast to see details)</h5>
       </center>
-    </div>
-    <!-- owl carousel menu -->
-    <div class="movie-content" style="background-color: #181818b5;">
+    </div> -->
+  <!-- owl carousel menu -->
+  <!-- <div class="movie-content" style="background-color: #fcfcfcb5;">
       
           {% for name, details in casts.items() if not casts.hidden %}
           <div class="castcard card " style="width: 180px;" title="Click to know more about {{name}}" data-toggle="modal"
@@ -181,45 +149,50 @@
           {% endfor %}
       
     </div>
-    {% endif %}
-    {% if reviews %}
-
-    <h2 style="color:white; text-align: left; background-color: #5d595942;" >User Review</h2>
-    <div class="col-md-12 tb_review" style="margin: 0 auto; margin-top:25px; background-color: #181818;" >
-      <table class="table table-bordered" bordercolor="white" style="color:white">
-        <thead>
-          <tr>
-            <th class="text-center" scope="col" style="width: 75%">Comments</th>
-            <th class="text-center" scope="col">Sentiments</th>
-          </tr>
-        </thead>
-
-        <tbody>
-          {% for review, status in reviews.items() if not reviews.hidden %}
-          <!-- background-color:#e5091485; -->
-          <tr style="background-color: #d5d3d3;
-            color: black;">
-            <td>{{review}}</td>
-            <td>
-              <center>
-                {{status}} : 
-                {% if status =='Good' %}
-                &#128515;
-                {% else %}
-                &#128534;
-                {% endif %}
-              </center>
-            </td>
-          </tr>
-          {% endfor %}
-        </tbody>
-      </table>
-    </div>
+    {% endif %} -->
+  {% if reviews %}
+  <h2 style="color:white; text-align: left; background-color: #242323f5; margin-top: 10px;">User Review
+    {% if sentiment_avg == 'Good' %}
+    &#128515;
     {% else %}
-    <div style="color:white;">
-      <h1 style="color:white"> This movie is not released yet. Stay tuned! </h1>
-    </div>
+    &#128534;
     {% endif %}
+  </h2>
+  <div class="col-md-12 tb_review" style="margin: 0 auto; margin-top:25px; background-color: #5d5959;">
+    <table class="table table-bordered" bordercolor="white" style="color:white">
+      <thead>
+        <tr>
+          <th class="text-center" scope="col" style="width: 75%">Comments</th>
+          <th class="text-center" scope="col">Sentiments</th>
+        </tr>
+      </thead>
+
+      <tbody>
+        {% for review, status in reviews.items() if not reviews.hidden %}
+        <!-- background-color:#e5091485; -->
+        <tr style="background-color: #d5d3d3;
+            color: black;">
+          <td>{{review}}</td>
+          <td>
+            <center>
+              {{status}} :
+              {% if status =='Good' %}
+              &#128515;
+              {% else %}
+              &#128534;
+              {% endif %}
+            </center>
+          </td>
+        </tr>
+        {% endfor %}
+      </tbody>
+    </table>
+  </div>
+  {% else %}
+  <div style="color:white;">
+    <h1 style="color:white"> This movie is not released yet! </h1>
+  </div>
+  {% endif %}
   </center>
   </div>
   </div>
@@ -233,31 +206,7 @@
     crossorigin="anonymous"></script>
   <!-- bootstrap -->
   <script type="text/javascript" src="{{ url_for('static', filename='js/bootstrap.min.js') }}"></script>
-  <!-- Owl-Carousel -->
-  <script type="text/javascript" src="{{ url_for('static', filename='js/owl.carousel.min.js') }}"></script>
-  <script>
-    $(document).ready(function(){
-      $('.owl-carousel').owlCarousel({
-        loop: false,
-        margin: 10,
-        nav: true,
-        navText:["<div class='nav-button owl-prev'><i class='fa fa-caret-left'></i></div>", "<div class='nav-button owl-next'><i class='fa fa-caret-right'></i></div>"],
-        autoplay: false,
-        autoplayHoverPause: true,
-        responsive: {
-          0: {
-            items: 1
-          },
-          600: {
-            items: 3
-          },
-          1000: {
-            items: 5
-          }
-        }
-      })
-    });
-  </script>
+
 </body>
 
 </html>
